--- a/frontend/app/styles/utils.module.css
+++ b/frontend/app/styles/utils.module.css
@@ -50,3 +50,9 @@
 .lightText {
     color: #666;
 }
+
+.entryForm {
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
